# UBB

First Year/Sem 1/Fundamentals of Programming/a10/src/: board.py  game.py  repo_memory.py  test.py  ui.py
First Year/Sem 1/Fundamentals of Programming/a2/: search sort.py
First Year/Sem 1/Fundamentals of Programming/a3/: time complexity.py
First Year/Sem 1/Fundamentals of Programming/a4/: backtracking.py
First Year/Sem 1/Fundamentals of Programming/a5/: README.md
First Year/Sem 1/Fundamentals of Programming/a5/src/: program.py
First Year/Sem 1/Fundamentals of Programming/a6/: README.md
First Year/Sem 1/Fundamentals of Programming/a6/src/: functions.py  start.py  tests.py  ui.py
First Year/Sem 1/Fundamentals of Programming/a8/: README.md
First Year/Sem 1/Fundamentals of Programming/a9/: README.md
First Year/Sem 1/Fundamentals of Programming/t1/: README.md
First Year/Sem 1/Fundamentals of Programming/t1/src/: functions.py  program.py  ui.py
First Year/Sem 1/Fundamentals of Programming/timeComplexity/: time complexity.py
First Year/Sem 2/DSA/DSA lab1 - ADT Bag/: Bag.cpp  Bag.h  BagIterator.cpp  CMakeLists.txt  ExtendedTest.cpp
First Year/Sem 2/DSA/DSA lab2 - Priority Queue/: CMakeLists.txt  PriorityQueue.cpp  PriorityQueue.h
First Year/Sem 2/DSA/DSA lab3 - Sorted Bag DLLA/: CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp
First Year/Sem 2/DSA/DSA5prob5/: CMakeLists.txt  ExtendedTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
First Year/Sem 2/Graphs/Full (mostly)/: DFS.py  activities.txt  app.py  graph.py  graph.txt  graph2.txt  graph_1comp.txt  graph_3comp.txt  neg_cycle_zero_three.txt  rand_graph.txt  random_graph1.txt
First Year/Sem 2/Graphs/Graphs4 - activities/: activities.txt  activityGraph.py  app.py
First Year/Sem 2/OOP/a2/: main.c  product.c  product.h  repo.c  repo.h  service.c  service.h
First Year/Sem 2/OOP/a4-5/: CMakeLists.txt  DynamicArray.h  main.cpp
First Year/Sem 2/OOP/a4-5/Console/: Console.cpp  Console.h
First Year/Sem 2/OOP/a4-5/Domain/: Date.cpp  Date.h  Event.cpp  Event.h
First Year/Sem 2/OOP/a4-5/Repository/: Repository.cpp  Repository.h
First Year/Sem 2/OOP/a4-5/Service/: Service.cpp  Service.h
First Year/Sem 2/OOP/a4-5/Tests/: test_domain.cpp  test_domain.h  test_dyn_arr.cpp  test_dyn_arr.h  test_repo.cpp  test_repo.h  test_service.cpp  test_service.h  test_validation.cpp  test_validation.h
First Year/Sem 2/OOP/a6-7/: CMakeLists.txt  EventsList.html  input.txt  main.cpp
First Year/Sem 2/OOP/a6-7/CSVRepository/: CSVRepository.cpp  CSVRepository.h
First Year/Sem 2/OOP/a6-7/Console/: Console.cpp  Console.h
First Year/Sem 2/OOP/a6-7/Domain/: Date.cpp  Event.cpp  Event.h
First Year/Sem 2/OOP/a6-7/FileRepository/: FileRepository.cpp  FileRepository.h
First Year/Sem 2/OOP/a6-7/HTMLRepository/: HTMLRepository.cpp  HTMLRepository.h
First Year/Sem 2/OOP/a6-7/Repository/: Repository.cpp  Repository.h
First Year/Sem 2/OOP/a6-7/Service/: Service.cpp  Service.h
First Year/Sem 2/OOP/a6-7/Tests/: test_domain.cpp  test_domain.h  test_dyn_arr.cpp  test_dyn_arr.h  test_repo.cpp  test_repo.h  test_service.cpp  test_service.h  test_validation.cpp
First Year/Sem 2/OOP/a8-9/: CMakeLists.txt  EventsList.csv  EventsList.html  input.txt  main.cpp
First Year/Sem 2/OOP/a8-9/AbstractEventsList/: AbstractEventsList.cpp  AbstractEventsList.h
First Year/Sem 2/OOP/a8-9/AdminGUI/: AdminGUI.cpp  AdminGUI.h
First Year/Sem 2/OOP/a8-9/CSVRepository/: CSVRepository.cpp  CSVRepository.h
First Year/Sem 2/OOP/a8-9/Console/: Console.cpp  Console.h
First Year/Sem 2/OOP/a8-9/Domain/: Date.h
First Year/Sem 2/OOP/a8-9/Exceptions/: Exceptions.cpp  Exceptions.h
First Year/Sem 2/OOP/a8-9/GUI/: GUI.cpp  GUI.h
First Year/Sem 2/OOP/a8-9/HTMLRepository/: HTMLRepository.cpp  HTMLRepository.h
First Year/Sem 2/OOP/a8-9/Service/: Service.cpp  Service.h
First Year/Sem 2/OOP/a8-9/Tests/: test_validation.h
First Year/Sem 2/OOP/a8-9/UserGUI/: UserGUI.cpp  UserGUI.h
First Year/Sem 2/OOP/a8-9/Validator/: Validator.cpp  Validator.h
First Year/Sem 2/OOP/exam practice/OOPExamPractice/: CMakeLists.txt  main.cpp
First Year/Sem 2/OOP/exam practice/OOPExamPracticeDeliverNow/: CMakeLists.txt  Observer.h  couriers.txt  main.cpp  packages.txt
First Year/Sem 2/OOP/exam practice/OOPExamPracticeDriveConnect/: CMakeLists.txt  Observer.h  drivers  main.cpp  reports
First Year/Sem 2/OOP/exam practice/OOPExamPracticeEventPlanner/: CMakeLists.txt  Observer.h  events  main.cpp  persons
First Year/Sem 2/OOP/exam practice/OOPExamPracticePatientManagement/: CMakeLists.txt  Observer.h  main.cpp
First Year/Sem 2/OOP/exam practice/OOPExamPracticePatientManagement/Domain/: Doctor.cpp  Doctor.h  Patient.cpp  Patient.h
First Year/Sem 2/OOP/exam practice/OOPExamPracticePatientManagement/GUI/: GUI.cpp  GUI.h
First Year/Sem 2/OOP/exam practice/OOPExamPracticePatientManagement/Repository/: Repository.cpp  Repository.h  doctors.txt  patients.txt
First Year/Sem 2/OOP/exam practice/OOPExamPracticeQuiz2/: CMakeLists.txt  Observer.h  main.cpp  participants.txt  questions
First Year/Sem 2/OOP/exam practice/OOPExamPracticeTaskManager/: CMakeLists.txt  Observer.h  main.cpp  programmers  tasks
First Year/Sem 2/OOP/exam practice/OOPExamPracticeVolunteering/: CMakeLists.txt  Observer.h  departments.txt  main.cpp  volunteers.txt
First Year/Sem 2/OOP/t2 practice - only minimum requirements/OOP PracticeT2/: Appliance.cpp  Appliance.h  CMakeLists.txt  Console.cpp  Console.h  Dishwasher.cpp  Dishwasher.h  Refrigerator.cpp  Refrigerator.h  Repo.cpp  Repo.h  Service.cpp  Service.h  start.cpp
First Year/Sem 2/OOP/t2 practice - only minimum requirements/OOP PracticeT2Buildings/: Block.cpp  Block.h  Building.cpp  Building.h  CMakeLists.txt  Console.cpp  Console.h  Controller.cpp  Controller.h  House.cpp  House.h  main.cpp
First Year/Sem 2/OOP/t2 practice - only minimum requirements/OOP PracticeT2Car/: CMakeLists.txt  Car.cpp  Car.h  Console.cpp  Console.h  Electric.cpp  Electric.h  Engine.cpp  (+6 more)
(+159 files in other folders)
