cmake_minimum_required(VERSION 3.30)
project(DSA_lab_2___Priority_Queue)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA_lab_2___Priority_Queue
        App.cpp
        ExtendedTest.h
        ExtendedTest.cpp
        PriorityQueue.h
        PriorityQueue.cpp
        ShortTest.h
        ShortTest.cpp)
