cmake_minimum_required(VERSION 3.30)
project(DSA5prob5)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA5prob5
        App.cpp
        ExtendedTest.h
        ExtendedTest.cpp
        ShortTest.h
        ShortTest.cpp
        SortedBag.h
        SortedBag.cpp
        SortedBagIterator.h
        SortedBagIterator.cpp
)
